# generic_spline

./: Cargo.toml  README.md
examples/: batch.rs  cubic_spline.rs  extrapolate.rs  mixed_knots.rs  piecewise_linear.rs
src/: knot.rs  lib.rs  polynomial.rs  spline.rs
