[package]
name = "generic_spline"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library of generic implementation of spline which does not assume that spline is used in graphics context."
readme = "README.md"
keywords = ["interpolation", "spline"]
repository = "https://github.com/KacperPotapczyk/generic_spline"

[dependencies]
nalgebra = "0.33.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
